# db

./: CMakeLists.txt  README.md  db.cpp
mongo-c-driver/include/libbson-1.0/bson/: bson-config.h
mongo-c-driver/include/libmongoc-1.0/mongoc/: mongoc-config.h
mongo-c-driver/lib/cmake/bson-1.0/: bson-1.0-config-version.cmake  bson-targets-relwithdebinfo.cmake  bson-targets.cmake
mongo-c-driver/lib/cmake/libbson-1.0/: libbson-1.0-config.cmake
mongo-c-driver/lib/cmake/libbson-static-1.0/: libbson-static-1.0-config.cmake
mongo-c-driver/lib/cmake/libmongoc-1.0/: libmongoc-1.0-config.cmake
mongo-c-driver/lib/cmake/libmongoc-static-1.0/: libmongoc-static-1.0-config.cmake
mongo-c-driver/lib/cmake/mongoc-1.0/: mongoc-1.0-config.cmake  mongoc-targets-relwithdebinfo.cmake  mongoc-targets.cmake
mongo-c-driver/lib/pkgconfig/: libbson-1.0.pc  libbson-static-1.0.pc  libmongoc-1.0.pc  libmongoc-ssl-1.0.pc  libmongoc-static-1.0.pc
mongo-cxx-driver/include/bsoncxx/v_noabi/bsoncxx/config/: export.hpp
mongo-cxx-driver/include/mongocxx/v_noabi/mongocxx/config/: export.hpp
mongo-cxx-driver/lib/cmake/bsoncxx-3.7.0/: bsoncxx_targets-release.cmake  bsoncxx_targets.cmake
mongo-cxx-driver/lib/cmake/mongocxx-3.7.0/: mongocxx_targets-release.cmake  mongocxx_targets.cmake
mongo-cxx-driver/lib/pkgconfig/: libbsoncxx.pc  libmongocxx.pc
